--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,5 @@ RUN pip3 install poetry
 RUN poetry config virtualenvs.create false
 RUN poetry install
 COPY . .
-CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
+ENV PYTHONPATH=/autofl/src
+CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "api.main:app", "--bind", "0.0.0.0:8000"]
