--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.95.2"
+gunicorn = "^20.1.0"
+uvicorn = "^0.22.0"
+pandas = "^2.0.1"
 
 
 [build-system]
