--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.95.2"
 gunicorn = "^20.1.0"
 uvicorn = "^0.22.0"
 pandas = "^2.0.1"
+hydra-core = "^1.3.2"
+setuptools = "^67.8.0"
 
 
 [build-system]
