--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,20 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.95.2"
+fastapi = "^0.96.0"
 gunicorn = "^20.1.0"
 uvicorn = "^0.22.0"
 pandas = "^2.0.2"
 hydra-core = "^1.3.2"
 setuptools = "^67.8.0"
+tree-sitter = "^0.20.1"
+pyparsing = "^3.0.9"
+jupyter = "^1.0.0"
+antlr4-python3-runtime = "4.9.3"
 
+
+[tool.poetry.group.dev.dependencies]
+notebook = "^6.5.4"
 
 [build-system]
 requires = ["poetry-core"]
