--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pandas = "^2.0.2"
 hydra-core = "^1.3.2"
 setuptools = "^67.8.0"
 antlr4-python3-runtime = "4.9.3"
+multiset = "^3.0.1"
+scikit-learn = "^1.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
