--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,14 @@ gunicorn = "^20.1.0"
 uvicorn = "^0.22.0"
 pandas = "^2.0.2"
 hydra-core = "^1.3.2"
-setuptools = "^67.8.0"
+setuptools = "^68.0.0"
 antlr4-python3-runtime = "4.9.3"
 multiset = "^3.0.1"
 scikit-learn = "^1.2.2"
 pydantic = "^1.10.9"
 gitpython = "^3.1.31"
+loguru = "^0.7.0"
+tqdm = "^4.65.0"
 
 
 [tool.poetry.group.dev.dependencies]
