--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ pydantic = "^1.10.9"
 gitpython = "^3.1.31"
 loguru = "^0.7.0"
 tqdm = "^4.65.0"
-
+yake = { git = "git@github.com:LIAAD/yake.git" }
+python-rake = "^1.5.0"
+more-itertools = "^9.1.0"
 
 [tool.poetry.group.dev.dependencies]
 notebook = "^6.5.4"
