Adding multiple parser

--- a/config/local/docker.yaml
+++ b/config/local/docker.yaml
@@ -1,5 +1,8 @@
 # @package _global_
 base_path: /autofl
 data_path: ${base_path}/data
-raw_data_path: ${data_path}/raw/
+raw_data_path: ${data_path}/raw
 repository_path: ${raw_data_path}/repository
+test_data_path: ${data_path}/test
+grammars_path: ${data_path}/grammars/
+languages_library: ${grammars_path}/my-languages.so
