--- a/config/taxonomy/small.yaml
+++ b/config/taxonomy/small.yaml
@@ -1,3 +1,3 @@
-_target_: entity.taxonomy.KeywordTaxonomy
+_target_: src.entity.taxonomy.KeywordTaxonomy
 path: ${test_data_path}/test_taxonomy/labels.json
 keywords_path: ${test_data_path}/test_taxonomy/keywords
