--- a/config/main.yaml
+++ b/config/main.yaml
@@ -2,7 +2,7 @@
 defaults:
   - _self_
   - local: docker
-  - taxonomy: small
+  - taxonomy: gitranking
   - lf: keyword
   - filtering: none
   - transformation: none
