--- a/config/test.yaml
+++ b/config/test.yaml
@@ -3,7 +3,7 @@ defaults:
   - _self_
   - local: docker
   - taxonomy: small
-  - lf: keyword
+  - lfs: keyword
   - filtering: none
   - transformation: none
-  - version_strategy: latest_strategy
+  - version_strategy: latest
