WIP - Refactoring and DB usage

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: "3.8"
 services:
   api:
     build:
@@ -5,7 +6,7 @@ services:
       dockerfile: ./docker/Dockerfile
     ports:
       - "8000:8000"
-      - "30000:8888"
+      - "8888:8888"
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     volumes:
@@ -13,9 +14,74 @@ services:
         source: .
         target: /autofl
 
+  mongo:
+    image: mongo
+    #restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: development
+      MONGO_INITDB_USER: user
+      MONGO_INITDB_PWD: password
+    ports:
+      - "27017:27017"
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
+    command: [ "-f", "/etc/mongod.conf" ]
+    volumes:
+      - ./mongodb/mongod.conf:/etc/mongod.conf
+      - ./mongodb/initdb.d/:/docker-entrypoint-initdb.d/
+      - ./mongodb/data/db/:/data/db/
+
+  mongo-express:
+    image: mongo-express
+    #restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: true
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_BASICAUTH_USERNAME: user
+      ME_CONFIG_BASICAUTH_PASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://<user>:<password>@<mongo-container-name>:<container-port>/
+      #ME_CONFIG_MONGODB_URL: mongodb://root:root@localhost:27017/?authSource=admin
+
+  #  db:
+  ##    profiles:
+  ##      - database
+  #    image: postgres
+  #    restart: always
+  #    environment:
+  #      POSTGRES_DB: "auto_fl"
+  #      POSTGRES_USER: "postgres"
+  #      POSTGRES_PASSWORD: "temp"
+  #    healthcheck:
+  #      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+  #      interval: 1s
+  #      timeout: 5s
+  #      retries: 10
+  #    volumes:
+  #      - ./postgres-data:/var/lib/postgresql/data
+  #      - ./docker/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
+  #
+  #  adminer:
+  ##    profiles:
+  ##      - database
+  #    image: adminer
+  #    restart: always
+  #    ports:
+  #      - 8080:8080
+
   ui:
-#    profiles:
-#      - ui
+    #    profiles:
+    #      - ui
     build:
       context: autofl-ui/
       dockerfile: ./docker/Dockerfile
@@ -29,3 +95,7 @@ services:
         target: /autofl-ui
     links:
       - 'api:auto-fl'
+
+#volumes:
+#  postgres-data:
+#    external: false
