--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ tqdm = "^4.66.1"
 python-rake = "^1.5.0"
 more-itertools = "^10.1.0"
 tree-sitter = "^0.20.2"
+pymongo = "^4.5.0"
+pydantic-mongo = "^2.0.2"
 
 [tool.poetry.group.dev.dependencies]
 notebook = "^6.5.4"
