--- a/config/dataloader/gitranking.yaml
+++ b/config/dataloader/gitranking.yaml
@@ -1,3 +1,4 @@
 _target_: dataloader.gitranking.GitRankingCSVDataLoader
 file_path: /home/sasce/PycharmProjects/AutoFL/data/raw/project_list.csv
 projects_path: ${repository_path}
+languages: [Java]
