--- a/config/run/batch_file_annotation.yaml
+++ b/config/run/batch_file_annotation.yaml
@@ -4,7 +4,7 @@ defaults:
   - /annotator: default
   - /taxonomy: small
   - /version_strategy: latest
-  - /writer: mongo
+  - /writer: postgres
 
 
 out_file:
