--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pydantic = "^2.4.2"
 gitpython = "^3.1.40"
 loguru = "^0.7.1"
 tqdm = "^4.66.1"
-yake = { git = "git@github.com:LIAAD/yake.git" }
+# yake = { git = "git@github.com:LIAAD/yake.git" }
 python-rake = "^1.5.0"
 more-itertools = "^10.1.0"
 tree-sitter = "^0.20.2"
