--- a/config/main.yaml
+++ b/config/main.yaml
@@ -3,7 +3,7 @@ defaults:
   - _self_
   - local: docker
   - taxonomy: gitranking
-  - annotator: default
+  - annotator: test
   - version_strategy: latest
   - dataloader: postgres
 
