--- a/config/main.yaml
+++ b/config/main.yaml
@@ -3,9 +3,10 @@ defaults:
   - _self_
   - local: docker
   - taxonomy: gitranking
-  - annotator: test
+  - annotator: default
   - version_strategy: latest
   - dataloader: postgres
+  - writer: postgres
 
 hydra:
   output_subdir: null
