--- a/config/dataloader/postgres.yaml
+++ b/config/dataloader/postgres.yaml
@@ -1,5 +1,5 @@
 _target_: dataloader.postgres_dataloader.PostgresProjectLoader
-host: localhost
+host: db
 db: auto_fl
 user: postgres
 password: temp
