--- a/config/run/batch_annotation.yaml
+++ b/config/run/batch_annotation.yaml
@@ -4,4 +4,4 @@ defaults:
   - /annotator: default
   - /taxonomy: gitranking
   - /version_strategy: latest
-  - /writer: postgres
+  - /writer: postgres_local
