--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,29 +1,29 @@
-name: documentation
+name: mkdocs
+
 on:
   push:
-    branches:
-      - dev-doc
-      - main
-permissions:
-  contents: write
+    branches: [ dev-doc ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.10 ]
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Configure Git Credentials
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-      - uses: actions/cache@v3
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+
+      - name: Install requirements
+        run: python3 -m pip install -r mkdocs_requirements.txt
+
+      - name: Deploy 🚀
+        run: python3 -m mkdocs gh-deploy --force
