--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -2,7 +2,7 @@
 
 site_name: AutoFL - Documentation
 site_description: Documentation for AutoFL
-site_url: sascezar.gitlab.io/AutoFL
+site_url: http://sascezar.gitlab.io/AutoFL
 
 repo_url: https://github.com/SasCezar/AutoFL
 edit_uri: edit/main/docs/docs
