--- a/config/run/batch_annotation.yaml
+++ b/config/run/batch_annotation.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
-  - /dataloader: gitranking
+  - /dataloader: zaki
   - /annotator: default
   - /taxonomy: gitranking
-  - /version_strategy: latest
-  - /writer: postgres_local
+  - /version_strategy: noop
+  - /writer: file
