--- a/config/runs.yaml
+++ b/config/runs.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - _self_
-  - local: local
+  - environment: docker
   - run: batch_annotation
 
 package_annotation: True
