--- a/config/test.yaml
+++ b/config/test.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - _self_
-  - local: local
+  - environment: docker
   - taxonomy: small
   - annotator: default
   - version_strategy: latest
