--- a/.gitignore
+++ b/.gitignore
@@ -237,5 +237,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-data/repository
+data/models/
+data/out/
 data/test/repository
+data/raw/repository
+.idea/
